# lance

./: .gitignore  Cargo.toml  README.md  package-lock.json  package-lock.json.bak  package.json  playwright.config.ts
.github/scripts/: deploy-contracts.sh
.github/workflows/: CI.yml  ci.yml
apps/web/: next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
backend/: .env.example  Cargo.toml  package-lock.json  package.json
backend/migrations/: 20260326000001_appeals.sql  20260329000001_profiles_and_deliverables.sql  20260425000001_deposits.sql
backend/prisma/: schema.prisma
backend/src/: db.rs  env_config.rs  index.ts  indexer.rs  ledger_follower.rs  main.rs  models.rs  tx_metadata_cache.rs  tx_queue.rs  worker.rs
backend/src/middleware/: authGuard.ts  mod.rs  rate_limit.rs
backend/src/routes/: activity.rs  admin.rs  appeals.rs  auth.rs  auth.ts  bids.rs  deliverables.rs  disputes.rs  evidence.rs  health.rs  jobs.rs  milestones.rs  mod.rs  uploads.rs  users.rs  verdicts.rs
backend/src/services/: auth.rs  ipfs.rs  judge.rs  metadata.rs  mod.rs  stellar.rs
contracts/escrow/: Cargo.toml
contracts/reputation/: Cargo.toml
docs/: indexer_runbook.md  runbook-indexer.md  running-the-stack.md  troubleshooting.md
docs/contracts/: escrow_job_registry_integration.md  job_registry.md  storage_fee_handling.md  storage_layout_optimization.md  upgradeability_pattern.md
monitoring/: docker-compose.monitoring.yml
playwright-report/: index.html
test-results/: .last-run.json
tests/e2e/: client-dashboard.spec.ts  gig-lifecycle.spec.ts  (+2 more)
(+168 files in other folders)
